--- a/documentation.html
+++ b/documentation.html
@@ -4,6 +4,7 @@
 	<title>Documentation</title>
 </head>
 <body>
+	<section><h2><a href="https://www.youtube.com/watch?v=FjNFEe-ouDE&feature=youtu.be&ab_channel=SiddhiJoshi">  Video</a></h2></section>
 	<h1>London's 1854 cholera epidemic Visualization by Siddhi Joshi (sidjoshi@iu.edu)</h1>
 <h2>Design Process</h2>
 <p> I started the process by observing the <a href="https://en.wikipedia.org/wiki/1854_Broad_Street_cholera_outbreak">original map by John Snow.</a> Since the interactivity between the timeline chart and the map was the main feature, I sketched them out onto a paper. After that, I coded the map first with a grid that shows what each mark means, and cthen constructed the timeline bar chart. To connect these two graphs, I wrote functions for hovering mouse on a bar, and showing death cicles till that day on the map.
