--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href=documentation.html>Documentation</a>
 			</section>
 				
-    <svg id="age_group_deaths" width=300 height=300 style="margin:  60px"  >
+    <svg id="age_group_deaths" width=350 height=300 style="margin:  60px"  >
     <text x='0' y='220'> < 10</text>
     <text x='45' y='220'>11-20</text>
     <text x='100' y='220'>21-40</text>
@@ -23,7 +23,7 @@
     <text id='label' x='120' y='270'> Age Distribution Chart</text>
         <g></g>
     </svg>
-    <svg id="gender_chart" width=200 height=400 style="margin:  60px">
+    <svg id="gender_chart" width=175 height=400 style="margin-bottom: 60px">
 
     	<text x='10' y='320'>female</text>
     <text x='80' y='320'>male</text>
@@ -31,7 +31,7 @@
 
         <g></g>
     </svg>
- <svg id="timeline" width=500 height=500>
+ <svg id="timeline" width=500 height=600>
         <g></g>
     </svg>
         <svg id= "infoGrid" width=400 height=300></svg>
